# swagger/swagger_output.json
@@ -16,13 +16,33 @@
     }
   ],
   "paths": {
-    "/users/": {
-      "get": {
+    "/usuario/criar": {
+      "post": {
         "description": "",
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "nome": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "senha": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
